    . [#1754] ViSP should not export MacOS SDK path
    . [#1755] Segfault when parsing an mpeg video with videoReader example with OpenCV 4.12.0 and OpenCV 4.13.0
      third-party
    . [#1764] The default constructor of the vpQuaternion class lead to an incorrect rotation matrix
    . [#1765] Segfault when parsing .cao and/or .init files containing empty lines (MBT and RBT)
----------------------------------------------
ViSP 3.6.0 (released September 22, 2023)
  - Contributors:
    . Fabien Spindler, Souriya Trinh, Romain Lagneau, Antonio Marino, Samuel Felton,
      Francois Chaumette, Olivier Roussel, Julien Dufour, Joudy Nader
  - New classes
    . vpMocapVicon an interface over Vicon motion capture system
    . vpMocapQualisys an interface over Qualisys motion capture system
    . vpPclViewer that enables real time plotting of 3D point clouds based on PCL library
    . vpRobotUniversalRobots that allows to control an Universal Robots robot
    . vpRobotMavsdk that allows to control a robot equipped with a Pixhawk (drone, rover...)
    . vpDetectorDNNOpenCV a wrapper over the OpenCV DNN module that allows
      to detect objects using Faster-RCNN, SSD-MobileNet, ResNet 10, Yolo v3, Yolo v4,
      Yolo v5, Yolo v7 and Yolo v8 convolutional networks
    . vpImageCircle that refers to a 2D circle in an image
    . vpCircleHoughTransform that allows to detect circles in an image
    . vpCannyEdgeDetection that allows to detect Canny edges without using OpenCV
    . vpMegaPose and vpMegaPoseTracker classes that are wrapper over MegaPose
      https://megapose6d.github.io/ that allows 6D pose estimation using a DNN approach
  - New features and improvements
    . Video writer is now able to create the output folder recursively (see vpVideoWriter)
    . New image-based and position-based examples with UR robot
    . Tutorial for extrinsic calibration improved with UR robot and Panda robot use cases